--- a/Content/MainTheme.css
+++ b/Content/MainTheme.css
@@ -1,13 +1,20 @@
-﻿body {
+﻿@import "reset.css";
+body {
   color: white;
   background-color: lightgray;
 }
 #MasterWrapper {
   left: 0px;
   right: 0px;
+  /*margin: 20px;*/
   margin-left: auto;
   margin-right: auto;
-  width: 800px;
+  width: 960px;
+}
+#TopMenu {
+  position: relative;
+  width: 100%;
+  height: 240px;
 }
 #TopMenuBar {
   height: 40px;
@@ -18,8 +25,7 @@
   /*removes bullets*/
   list-style-type: none;
   line-height: 40px;
-  margin: 0;
-  padding: 0;
+  margin-right: 20px;
 }
 #TopMenuBar ul li {
   /*makes them display next to eachother*/
@@ -35,11 +41,18 @@
 .TopMenuBarItem:hover {
   color: lightblue;
 }
+#TopMenuImage {
+  height: 200px;
+  display: block;
+}
 .Logo {
-  color: blue;
+  color: #0000ff;
   font-size: 28px;
   font-style: italic;
   float: left;
+  margin-left: 20px;
+  margin-top: 5px;
+  text-decoration: none;
 }
 .ContentBody {
   width: 800px;
@@ -93,8 +106,20 @@ Create a relative div that is placed in the flow of the page; place the base ima
     */
 }
 #ThirtyFiveYears {
-  position: relative;
-  top: 25px;
-  left: 650px;
+  position: absolute;
+  top: 60px;
+  right: 20px;
+}
+.LineItemColumn {
+  float: left;
+  width: 33.33%;
+  height: 400px;
+  box-sizing: border-box;
+  padding: 5px;
+}
+footer {
+  margin: 3px 0 0 20px;
+  position: absolute;
+  top: 650px;
 }
 /*# sourceMappingURL=MainTheme.css.map */
