--- a/Content/MainTheme.less
+++ b/Content/MainTheme.less
@@ -1,4 +1,7 @@
-﻿body {
+﻿@import "reset.css";
+@CamtecBlue: blue; //rgb(8,23,51)
+
+body {
    color: white;
    background-color: lightgray;
 }
@@ -6,9 +9,17 @@
 #MasterWrapper{
     left: 0px;
     right: 0px;
+    /*margin: 20px;*/
     margin-left: auto;
     margin-right: auto;
-    width: 800px;
+
+    width: 960px;
+}
+
+#TopMenu{
+    position: relative;
+    width: 100%;
+    height:240px;
 }
 
 #TopMenuBar {
@@ -19,8 +30,7 @@
         /*removes bullets*/
         list-style-type: none; 
         line-height: 40px;
-        margin: 0;
-        padding: 0;    
+        margin-right: 20px;
         li{
             /*makes them display next to eachother*/    
             display:inline; 
@@ -39,11 +49,19 @@
     color: white;
 }
 
+#TopMenuImage{
+    height: 200px;
+    display:block;
+}
+
 .Logo{
-    color:blue;
+    color: @CamtecBlue;//#081733;
     font-size: 28px;
     font-style: italic;
     float:left;
+    margin-left:20px;
+    margin-top:5px;
+    text-decoration:none;
 }
 
 .ContentBody{
@@ -106,9 +124,21 @@ Create a relative div that is placed in the flow of the page; place the base ima
 
 
 #ThirtyFiveYears{
-    position: relative;
-    top: 25px;
-    left: 650px;
+    position: absolute;
+    top: 60px;
+    right: 20px;
 }
 
+.LineItemColumn{
+    float: left;
+    width: 33.33%;
+    height: 400px;
+    box-sizing: border-box;
+    padding: 5px;
+}
 
+footer{
+    margin: 3px 0 0 20px;
+    position:absolute;
+    top:650px;
+}
