Added some logos

--- a/Content/MainTheme.less
+++ b/Content/MainTheme.less
@@ -135,6 +135,13 @@ Create a relative div that is placed in the flow of the page; place the base ima
     height: 400px;
     box-sizing: border-box;
     padding: 5px;
+    background-color:white;
+    ul{    
+        list-style-type: none;
+        li {
+        color:black;
+        }   
+    }
 }
 
 footer{
