--- a/Content/MainTheme.css
+++ b/Content/MainTheme.css
@@ -116,6 +116,13 @@ Create a relative div that is placed in the flow of the page; place the base ima
   height: 400px;
   box-sizing: border-box;
   padding: 5px;
+  background-color: white;
+}
+.LineItemColumn ul {
+  list-style-type: none;
+}
+.LineItemColumn ul li {
+  color: black;
 }
 footer {
   margin: 3px 0 0 20px;
